# quartz-systems-cloudsdk

./: .gitignore  README.md  build-deb.sh  build-rpm.sh
.github/workflows/: build-packages.yml
backend/: .gitignore  Cargo.toml
backend/src/: auth.rs  cloudsdk.rs  config.rs  error.rs  main.rs  proxy.rs  tls.rs
backend/www/: .gitkeep
debian/: changelog  control  debhelper-build-stamp  postinst  postrm  quartz-cloudsdk-webui.postrm.debhelper  rules
frontend/: next.config.js  package-lock.json  package.json  postcss.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx
frontend/app/(console)/admin/: page.tsx
frontend/app/(console)/clients/: page.tsx
frontend/app/(console)/dashboard/: page.tsx
frontend/app/(console)/infrastructure/: page.tsx
frontend/app/(console)/networks/: page.tsx
frontend/app/(console)/organizations/: page.tsx
frontend/app/(console)/venues/: page.tsx
frontend/components/: AuthGuard.tsx
frontend/components/admin/: AddressAutocomplete.tsx  MapPanel.tsx  OverviewTab.tsx  SecurityTab.tsx  UserDrawer.tsx
frontend/components/dashboard/: AlarmsTable.tsx  DashboardShell.tsx  OrganizationSwitcher.tsx  PagePlaceholder.tsx  Sidebar.tsx  StatTile.tsx  TrendChart.tsx
frontend/components/ui/: Button.tsx  Tabs.tsx
frontend/lib/: OrganizationContext.tsx  api.ts  clients.ts  dashboard.ts  devices.ts  history.ts  infrastructure.ts  notifications.ts  organizations.ts  orgboard.ts  profiles.ts  settings.ts  users.ts  venues.ts
packaging/config/: webui.toml
packaging/systemd/: quartz-cloudsdk-webui.service
rpm/: quartz-cloudsdk-webui.spec
(+5 files in other folders)
